# GiftApp2

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: mail.py  main.py  s3_service.py  storage.py  sсheduler.py
app/api/v1/: dependencies.py  exceptions.py  pagination.py  router.py
app/api/v1/dependencies/: __init__.py  base.py  factories.py  security.py
app/api/v1/features/: exceptions.py  models.py
app/api/v1/features/auth/: dependencies.py  endpoints.py  (+5 more)
app/core/: config.py  database.py  settings.py
app/core/enums/: __init__.py
app/core/models/: base.py  mixins.py
app/exceptions/: __init__.py  auth.py  common.py  event.py  media.py
app/exceptions/auth/: exceptions.py
app/exceptions/event/: exceptions.py
app/exceptions/media/: exceptions.py
app/ideas/: idea_schemas.py  idea_service.py
app/mail_templates/: activate_account.html  reset_password.html
app/models/: __init__.py  auth.py  event.py  events.py  idea.py  media.py  recipient.py  recipients.py
app/repositories/: media.py  orm.py  recipient.py  user.py
app/repositories/abstract/: base.py
app/repositories/orm/: __init__.py  base.py  idea.py  media.py  recipient.py  user.py
app/schemas/: auth.py  event.py  event_schemas.py  media.py  recipient.py  user.py  user_schemas.py
app/service/: auth.py  auth_service.py  event.py  event_service.py  idea.py  idea_policy.py  recipient.py  recipient_service.py  user.py
app/service/auth/: __init__.py  auth.py  registration.py
app/service/idea/: __init__.py  crud.py  policy.py
app/service/media/: __init__.py  uploader.py  validator.py
app/service/recipient/: __init__.py  crud.py  policy.py
app/utils/: media.py  security.py
migrations/: env.py
migrations/versions/: 2025_04_28_1217-df3ddf452174_create_user_table.py  2025_04_28_2214-df1b606dcc02_create_recipient_table.py  2025_04_29_2326-96466a1e7a20_create_event_and_eventoccurrence_table.py  2025_05_01_2222-c8d068731b4e_add_deleted_at_field_to_event.py  2025_05_03_2111-aa359f3dc894_jsonb_to_json_fix.py  2025_05_03_2112-7540ebcf27bb_global_event_validation.py  2025_05_05_0935-990201af66fc_naming_convension.py  2025_05_05_1023-7264ef66c4c9_add_updated_at_created_at_fields.py  2025_05_05_1251-c76ba8f829ad_init_database_v2.py  2025_05_05_2333-fa67b93e81be_create_giftidea_model.py  2025_05_09_1311-9a3bc9fe4099_create_mediafile_model.py  2025_05_12_0843-55699fc03445_update_user_table.py  2025_05_14_1040-7d83b3a5e3a2_new_user_fields.py
scripts/: clean_db.py  create_root_user.py
tests/: conftest.py  test_auth.py  test_events.py  test_recipients.py  test_security.py
(+16 files in other folders)
