[project]
name = "giftapp2"
version = "0.1.0"
description = ""
authors = [
    {name = "Dugd_Nitkin",email = "dugd.nitkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
aiosqlite = "^0.21.0"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0.post0"
boto3 = "^1.38.11"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
