[tool.poetry]
name = "giftapp2"
version = "0.1.0"
description = "Gift planning and tracking app"
authors = ["Dugd_Nitkin <dugd.nitkin@gmail.com>"]
readme = "README.md"
packages = [{ include = "giftapp2" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
aiosqlite = "^0.21.0"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0.post0"
boto3 = "^1.38.11"
pillow = "^11.2.1"
sendgrid = "^6.12.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
